# nrc-721-template

./: Cargo.toml  README.md  capsule.toml  deployment.toml
contracts/custom_nft/: Cargo.toml
contracts/custom_nft/src/: entry.rs  main.rs
tests/: Cargo.toml
tests/src/: nft_tests.rs
