[package]
name = "custom_nft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.9.0"
blake2b-rs = "0.2.0"
nft_base = { git = "https://github.com/rather-labs/nrc-721.git", branch = "testing" }
